tests/cli/snapshots/cli_tests__cli__snapshot_helpers__update_all_skills.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
Updating skills...

[TIMESTAMP] DEBUG fastskill::cli::config: Using skills_directory from skill-project.toml: [TEMP_DIR]
[TIMESTAMP]  INFO fastskill::core::service: Initializing FastSkill service v[VERSION]
[TIMESTAMP]  INFO fastskill::storage::filesystem: Initialized filesystem storage at: [TEMP_DIR]
[TIMESTAMP]  INFO fastskill::core::service: Initializing service components...
[TIMESTAMP]  INFO fastskill::storage::filesystem: Filesystem storage initialized at: [TEMP_DIR]
[TIMESTAMP]  INFO fastskill::core::service: Service initialization complete
  Updating dev-tools...
[TIMESTAMP]  INFO fastskill::storage::git: Cloning repository: https://github.com/org/dev-tools.git
  Updating local-skill...
  Updating remote-skill...
  Updating web-scraper...

[OK] Updated 0 skill(s)
   Updated skills.lock
