tests/cli/snapshots/cli_tests__cli__snapshot_helpers__update_dry_run.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
expression: normalized
---
Updating skills...

Skills that would be updated:

  • dev-tools (from Git { url: "https://github.com/org/dev-tools.git", ref: Branch("main"), subdir: None })
  • local-skill (from Local { path: "local-skill", editable: false })
  • remote-skill (from ZipUrl { url: "https://example.com/skill.zip" })
  • test-utils: Configuration error: No default repository configured
  • web-scraper: Configuration error: No default repository configured
