tests/cli/snapshots/cli_tests__cli__snapshot_helpers__update_missing_lock.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
expression: normalized
---
Updating skills...

Error: Configuration error: skills.lock not found. Run 'fastskill install' first.
