tests/cli/snapshots/cli_tests__cli__snapshot_helpers__update_specific_skill.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
expression: normalized
---
Updating skills...
  Updating web-scraper...
[OK] Updated 0 skill(s)
   Updated skills.lock
