tests/cli/snapshots/cli_tests__cli__snapshot_helpers__update_strategy_minor.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
FastSkill [VERSION]
Updating skills...

  Updating dev-tools...
[TIMESTAMP]  WARN fastskill::storage::git: Git operation failed with network error (attempt 1/3): fatal: unable to access 'https://github.com/org/dev-tools.git/': Could not resolve host: github.com

[TIMESTAMP]  WARN fastskill::storage::git: Git operation failed with network error (attempt 2/3): fatal: unable to access 'https://github.com/org/dev-tools.git/': Could not resolve host: github.com

  Updating local-skill...
  Updating remote-skill...
  Updating web-scraper...

[OK] Updated 0 skill(s)
   Updated skills.lock
