tests/cli/snapshots/cli_tests__cli__snapshot_helpers__update_strategy_patch.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
expression: normalized
---
Updating skills...
  Updating dev-tools...
  Updating local-skill...
  Updating remote-skill...
  Updating test-utils...
  Updating web-scraper...
[OK] Updated 0 skill(s)
   Updated skills.lock
